--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,10 @@
       <div class="menu__bg"></div>
     </aside>
     <body>
-      <section class="events" id="events">
+      <section
+        class="events"
+        id="events"
+      >
         <div class="container">
           <div class="events__content">
             <h2 class="events__title">Актуальні події</h2>
@@ -241,7 +244,10 @@
           </div>
         </div>
       </section>
-      <section class="gallery" id="gallery">
+      <section
+        class="gallery"
+        id="gallery"
+      >
         <div class="container">
           <h2 class="gallery__title">Галерея</h2>
           <div class="gallery__content">
@@ -269,7 +275,10 @@
           <div class="gallery__pagination"></div>
         </div>
       </section>
-      <section class="subscription" id="subscription">
+      <section
+        class="subscription"
+        id="subscription"
+      >
         <div class="container">
           <div class="subscription__content">
             <h2 class="subscription__title">Підписка</h2>
@@ -297,7 +306,10 @@
         </div>
       </section>
     </body>
-    <footer class="footer" id="footer">
+    <footer
+      class="footer"
+      id="footer"
+    >
       <div class="container">
         <div class="footer__content">
           <div class="footer__icons">
@@ -363,18 +375,39 @@
               </span>
             </p>
           </div>
-          <div class="footer__contacts">
-            <p class="contacts__contacts-title">Контакти:</p>
-            <p class="contacts__contacts-content">
-              вул. М. Грушевського, 6; Київ,
+          <div class="footer__contacts contacts">
+            <p class="contacts__title">Контакти:</p>
+            <p class="contacts__content">
+              <a
+                href="https://g.co/kgs/Fc29ph1"
+                class="contacts__contact"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ,
+                <br />
+                01001
+              </a>
               <br />
-              01001
+              <a
+                href="tel:+380442781357"
+                class="contacts__contact"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
               <br />
-              тел. +38 (044) 278-13-57
+              <a
+                href="fax:+380442787454"
+                class="contacts__contact"
+              >
+                факс +38 (044) 278-74-54
+              </a>
               <br />
-              факс +38 (044) 278-74-54
-              <br />
-              e-mail: info@namu.kiev.ua
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="contacts__contact"
+              >
+                e-mail: info@namu.kiev.ua
+              </a>
             </p>
           </div>
           <div class="footer__up-container">
@@ -425,7 +458,9 @@
             </ul>
           </nav>
           <p class="footer__designed">Designed by Zhyriada Marina</p>
-          <p class="footer__copyright">Copyright © 2019. All Rights Reserved.</p>
+          <p class="footer__copyright">
+            Copyright © 2019. All Rights Reserved.
+          </p>
         </div>
       </div>
     </footer>
