fix links and menu

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>NAMY</title>
+    <title>NAMU</title>
     <link
       rel="stylesheet"
       href="./styles/main.scss"
@@ -45,11 +45,16 @@
           >
             NA
             <br />
-            MY
+            MU
           </a>
         </div>
       </div>
-      <div class="header__image"></div>
+      <div class="header__image">
+        <img
+          class="header__img"
+          src="./images/Natsionalnij-hudozhnij-muzej-Ukrayini-Kiyiv-10-1800x1200.png"
+          alt="Natsionalnij hudozhnij muzej Ukrayini">
+      </div>
       <div class="header__content">
         <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
         <a
@@ -349,14 +354,16 @@
         >
           NA
           <br />
-          MY
+          MU
         </a>
         <div class="footer__social-media">
           <a
+            target="_blank"
             href="https://www.facebook.com/NAMUkraine/"
             class="icon icon--fb"
           ></a>
           <a
+            target="_blank"
             href="https://www.instagram.com/namu.museum/?igsh=MXQ4aHF4Mno2emhucA%3D%3D"
             class="icon icon--insta"
           ></a>
@@ -392,7 +399,8 @@
         <h3 class="footer__subtitle">Контакти:</h3>
         <div class="footer__block">
           <a
-            href="#"
+            href="https://maps.app.goo.gl/kpuzupiMUmJ1kfhC9"
+            target="_blank"
             class="footer__link"
           >
             вул. М. Грушевського, 6; Київ, 01001
