--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,49 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Title</title>
+    <title>NAMU</title>
+    <link
+      rel="icon"
+      href="./images/Header/NAMU-favicon.webp"
+      type="image/x-icon"
+    />
     <link
       rel="stylesheet"
-      href="./styles/main.scss"
+      href="./styles/html.scss"
     />
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <header class="header">
+      <div class="header__content">
+        <div class="header__bg-img">
+          <div class="top-bar">
+            <div class="top-bar__logo-icon">
+              <a href="#menu">
+                <img
+                  src="./images/Header/Museun-menu.webp"
+                  alt="menu"
+                  class="top-bar__menu icon icon--menu"
+                />
+              </a>
+              <a href="#">
+                <img
+                  src="./images/Header/NAMU-favicon.webp"
+                  alt="NAMU"
+                  class="top-bar__logo"
+                />
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="header-container">
+          <h1 class="header__title">Художній музей</h1>
+          <div class="header__button">
+            <p class="header__button-text">Квитки</p>
+            <button class="header__button-dec"></button>
+          </div>
+        </div>
+      </div>
+    </header>
     <script src="scripts/main.js"></script>
   </body>
 </html>
