--- a/src/index.html
+++ b/src/index.html
@@ -1,54 +1,111 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NAMU</title>
-    <link
-      rel="icon"
-      href="./images/Header/NAMU-favicon.webp"
-      type="image/x-icon"
-    />
-    <link
-      rel="stylesheet"
-      href="./styles/html.scss"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link rel="icon" href="./images/Header/NAMU-favicon.webp"
+    type="image/x-icon" />
+    <link rel="stylesheet" href="./styles/html.scss" />
   </head>
   <body>
     <header class="header">
       <div class="header__content">
-        <div class="header__bg-img">
-          <div class="top-bar">
-            <div class="top-bar__logo-icon">
-              <a href="#menu">
-                <img
-                  src="./images/Header/Museun-menu.webp"
-                  alt="menu"
-                  class="top-bar__menu icon icon--menu"
-                />
-              </a>
-              <a href="#">
-                <img
-                  src="./images/Header/NAMU-favicon.webp"
-                  alt="NAMU"
-                  class="top-bar__logo"
-                />
-              </a>
-            </div>
+        <div class="top-bar">
+          <div class="top-bar__logo-icon">
+            <a href="#menu" class="menu-toggle">
+              <img src="./images/Header/Museun-menu.webp" alt="menu"
+              class="top-bar__menu" />
+            </a>
+            <a href="#">
+              <img src="./images/Header/NAMU-favicon.webp" alt="NAMU"
+              class="top-bar__logo" />
+            </a>
           </div>
         </div>
-        <div class="header-container">
+        <div class="header__container">
           <h1 class="header__title">Художній музей</h1>
           <div class="header__button">
             <p class="header__button-text">Квитки</p>
-            <button class="header__button-dec"></button>
+            <a href="#" class="header__button-dec"></a>
+          </div>
+          <a href="#events" class="header__events">
+            <p class="header__events-text">Події</p>
+          </a>
+        </div>
+        <div class="header__bg-img"></div>
+      </div>
+    </header>
+    <aside class="menu" id="menu">
+      <div class="container">
+        <div class="menu__wrapper">
+          <nav class="menu__nav">
+            <a href="#close" id="close">
+              <img src="./images/Menu/Close.webp" alt="Close"
+              class="menu__nav-icon" />
+            </a>
+            <ul class="menu__nav-list">
+              <li class="menu__nav-item">
+                <a class="menu__nav-link" href="#gallery">Галерея</a>
+              </li>
+              <li class="menu__nav-item">
+                <a class="menu__nav-link" href="#about-us">Про Нас</a>
+              </li>
+              <li class="menu__nav-item">
+                <a class="menu__nav-link" href="#current-events">Виставки та події</a>
+              </li>
+              <li class="menu__nav-item">
+                <a class="menu__nav-link" href="#contact">Контакти</a>
+              </li>
+            </ul>
+          </nav>
+
+          <div class="menu__schedule">
+            <p class="menu__schedule-title">Графік роботи</p>
+            <ul class="menu__schedule-list">
+              <li class="menu__schedule-item">
+                <span class="menu__schedule-item--bold">12:00 — 20:00</span>
+                середа
+              </li>
+
+              <li class="menu__schedule-item">
+                <span class="menu__schedule-item--bold"> 12:00 — 20:00 </span>
+                четвер
+              </li>
+
+              <li class="menu__schedule-item">
+                <span class="menu__schedule-item--bold">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+
+              <li class="menu__schedule-item">
+                <span class="menu__schedule-item--bold">11:00 — 19:00</span>
+                субота
+              </li>
+
+              <li class="menu__schedule-item">
+                <span class="menu__schedule-item--bold">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+
+            <p class="menu__schedule-descriprion">
+              <span class="menu__schedule-descriprion--bold">Вихідні:</span>
+              понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
           </div>
         </div>
       </div>
-    </header>
+    </aside>
+    <div class="page-overlay"></div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
