--- a/src/index.html
+++ b/src/index.html
@@ -106,6 +106,78 @@
       </div>
     </aside>
     <div class="page-overlay"></div>
+
+    <main class="main">
+      <div class="container">
+        <section class="main__current" id="current-events">
+          <h1 class="main__title">Актуальні події</h1>
+          <div class="main__current-grid">
+            <div class="main__current-wrapper">
+              <img class="main__current-img" alt="picture"
+              src="./images/Current-events/Current-events-1.webp">
+
+              <div class="main__current-all-text">
+                <div class="main__current-date-wrapper">
+                  <p class="main__current-name">Виставка</p>
+                  <p class="main__current-date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="main__current-text">
+                  <div class="main__current-text-wrapper">
+                    <h3 class="main__current-text-title">Йду і повертаюсь</h3>
+                    <div class="main__current-text-dec"></div>
+                  </div>
+                  <p class="main__current-description">Національний Художній Музей України презентує унікальну частину
+                    колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+                  </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="main__current-wrapper">
+              <img class="main__current-img" alt="picture"
+              src="./images/Current-events/Current-events-2.webp">
+
+              <div class="main__current-all-text">
+                <div class="main__current-date-wrapper">
+                  <p class="main__current-name">Виставка</p>
+                  <p class="main__current-date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="main__current-text">
+                  <div class="main__current-text-wrapper">
+                    <h3 class="main__current-text-title">І спогади і мрії</h3>
+                    <div class="main__current-text-dec"></div>
+                  </div>
+                  <p class="main__current-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці
+                    Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </div>
+
+      <section class="main__lecture">
+        <img class="main__lecture-img" alt="picture"
+        src="./images/Lecture/Lecture.png">
+
+        <div class="main__lecture-wrapper">
+          <div class="main__lecture-date-wrapper">
+            <p class="main__lecture-name">Лекція</p>
+            <p class="main__lecture-date">26/08/2019 - 11:00</p>
+          </div>
+          <h3 class="main__lecture-title">Від класицизму до <br> романтизму</h3>
+        </div>
+      </section>
+
+      <section class="main__gallery">
+        <div class="container">
+          <h1 class="main__title">Галерея</h1>
+        </div>
+      </section>
+    </main>
     <script src="scripts/main.js"></script>
   </body>
 </html>
