--- a/src/index.html
+++ b/src/index.html
@@ -172,9 +172,68 @@
         </div>
       </section>
 
-      <section class="main__gallery">
+      <section class="gallery">
         <div class="container">
           <h1 class="main__title">Галерея</h1>
+          <div class="gallery__slider">
+            <div class="slider">
+              <div class="slides-container">
+                <div class="imgs-slides">
+                  <input type="radio" name="radio-btn"
+                        id="radio1" checked>
+                  <input type="radio" name="radio-btn"
+                        id="radio2">
+                  <input type="radio" name="radio-btn"
+                        id="radio3">
+                  <input type="radio" name="radio-btn"
+                        id="radio4">
+
+                  <div class="first slide">
+                    <img alt="picture" src="./images/Gallery/Gallery-1.webp">
+                  </div>
+
+                  <div class="slide">
+                    <img alt="picture" src="./images/Gallery/Gallery-2.1.png">
+                  </div>
+
+                  <div class="slide">
+                    <img alt="picture" src="./images/Gallery/Gallery-3.webp">
+                  </div>
+
+                  <div class="slide">
+                    <img alt="picture" src="./images/Gallery/Gallery-4.webp">
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery__navigation">
+            <div class="navigation-container">
+              <div class="navigation">
+                <label for="radio1" class="navigation-btn"></label>
+                <label for="radio2" class="navigation-btn"></label>
+                <label for="radio3" class="navigation-btn"></label>
+                <label for="radio4" class="navigation-btn"></label>
+              </div>
+            </div>
+          </div>
+
+          <div class="gallery__photos">
+            <div class="gallery__photos-1">
+              <img class="gallery__photos-img gallery__photos-img--height"
+                  alt="picture" src="./images/Gallery/Gallery-1.webp">
+              <img class="gallery__photos-img gallery__photos-img--width"
+                  alt="picture" src="./images/Gallery/Gallery-2.webp">
+            </div>
+
+            <div class="gallery__photos-2">
+              <img class="gallery__photos-img gallery__photos-img--width"
+                  alt="picture" src="./images/Gallery/Gallery-3.webp">
+              <img class="gallery__photos-img gallery__photos-img--height"
+                  alt="picture" src="./images/Gallery/Gallery-4.webp">
+            </div>
+          </div>
         </div>
       </section>
     </main>
