--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
     </aside>
     <div class="page-overlay"></div>
 
-    <main class="main">
+    <main class="main page__main">
       <div class="container">
         <section class="main__current" id="current-events">
           <h1 class="main__title">Актуальні події</h1>
