--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
                 <a class="menu__nav-link" href="#about-us">Про Нас</a>
               </li>
               <li class="menu__nav-item">
-                <a class="menu__nav-link" href="#current-events">Виставки та події</a>
+                <a class="menu__nav-link" href="#events">Виставки та події</a>
               </li>
               <li class="menu__nav-item">
                 <a class="menu__nav-link" href="#contact">Контакти</a>
@@ -109,7 +109,7 @@
 
     <main class="main page__main">
       <div class="container">
-        <section class="main__current" id="current-events">
+        <section class="main__current" id="events">
           <h1 class="main__title">Актуальні події</h1>
           <div class="main__current-grid">
             <div class="main__current-wrapper">
@@ -172,9 +172,9 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="main__gallery" id="gallery">
         <div class="container">
-          <h1 class="main__title">Галерея</h1>
+          <h1 class="main__title main__title--gallery">Галерея</h1>
           <div class="gallery__slider">
             <div class="slider">
               <div class="slides-container">
@@ -236,7 +236,142 @@
           </div>
         </div>
       </section>
+
+      <section class="main__following" id="about-us">
+        <img class="main__following-img" alt="picture"
+             src="./images/Following/Following.webp">
+
+        <div class="container">
+          <div class="main__following-content">
+            <div class="main__following-text">
+              <h1 class="main__following-title">Підписка</h1>
+              <p class="main__following-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
+            </div>
+
+            <form class="main__following-form">
+              <input type="email" name="email"
+                    class="main__following-input" placeholder="E-mail"
+                    required>
+              <div class="main__following-dec"></div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__wrapper">
+          <div class="footer__icon-logo">
+            <a href="#">
+              <img src="./images/Header/NAMU-favicon.webp" alt="NAMU"
+              class="footer__logo"/>
+            </a>
+
+            <div class="footer__icons">
+              <a class="footer__icon footer__icon--facebook"
+                href="https://www.facebook.com"
+                target="_blank">
+              </a>
+
+              <a class="footer__icon footer__icon--instagram"
+                href="https://www.instagram.com"
+                target="_blank">
+              </a>
+            </div>
+          </div>
+          <section class="footer__schedule">
+            <p class="footer__schedule-title">Графік роботи</p>
+            <ul class="footer__schedule-list">
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-item--bold">12:00 — 20:00</span>
+                середа
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-item--bold"> 12:00 — 20:00 </span>
+                четвер
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-item--bold">12:00 — 20:00</span>
+                п’ятниця
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-item--bold">11:00 — 19:00</span>
+                субота
+              </li>
+
+              <li class="footer__schedule-item">
+                <span class="footer__schedule-item--bold">11:00 — 19:00</span>
+                неділя
+              </li>
+            </ul>
+
+            <p class="footer__schedule-descriprion">
+              <span class="footer__schedule-descriprion--bold">Вихідні:</span>
+              понеділок, вівторок <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </section>
+
+          <section class="footer__contact">
+            <p class="footer__contact-title">Контакти:</p>
+            <ul class="footer__contact-list">
+              <li class="footer__contact-item">
+                <a href="https://www.google.com/search?q=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE%2C+6%3B+%D0%9A%D0%B8%D1%97%D0%B2%2C+01001&oq=%D0%B2%D1%83%D0%BB.+%D0%9C.+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D1%8C%D0%BA%D0%BE%D0%B3%D0%BE%2C+6%3B+%D0%9A%D0%B8%D1%97%D0%B2%2C+01001&gs_lcrp=EgZjaHJvbWUyBggAEEUYOTIHCAEQABiABDIKCAIQABiABBiiBDIKCAMQABiABBiiBDIKCAQQABiABBiiBDIGCAUQRRg9MgYIBhBFGD0yBggHEEUYPdIBBzk4MWowajSoAgCwAgE&sourceid=chrome&ie=UTF-8"
+                   class="footer__contact-link" target="_blank">
+                   вул. М. Грушевського, 6; Київ, 01001
+                </a>
+              </li>
+
+              <li class="footer__contact-item">
+                <a href="tel:+380442781357" class="footer__contact-link"
+                   target="_blank">
+                   тел. +38 (044) 278-13-57
+                </a>
+              </li>
+
+              <li class="footer__contact-item">
+                <a href="tel:+380442787454" class="footer__contact-link"
+                   target="_blank">тел. +38 (044) 278-74-54</a>
+              </li>
+
+              <li class="footer__contact-item">
+                <a href="mailto:info@namu.kiev.ua" class="footer__contact-link"
+                   target="_blank">
+                  e-mail: info@namu.kiev.ua
+                </a>
+              </li>
+            </ul>
+          </section>
+
+          <div class="footer__nav">
+            <ul class="footer__nav-list">
+              <li class="footer__nav-item">
+                <a class="footer__nav-link" href="#gallery">Галерея</a>
+              </li>
+              <li class="footer__nav-item">
+                <a class="footer__nav-link" href="#about-us">Про Нас</a>
+              </li>
+              <li class="footer__nav-item">
+                <a class="footer__nav-link" href="#events">Виставки та події</a>
+              </li>
+              <li class="footer__nav-item">
+                <a class="footer__nav-link" href="#contact">Контакти</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="footer__description-wrapper">
+          <p class="footer__description">Designed by Zhyriada Marina</p>
+          <p class="footer__description">Copyright © 2019. All Rights Reserved.</p>
+        </div>
+      </div>
+    </footer>
     <script src="scripts/main.js"></script>
   </body>
 </html>
