--- a/src/index.html
+++ b/src/index.html
@@ -252,7 +252,8 @@
               <input type="email" name="email"
                     class="main__following-input" placeholder="E-mail"
                     required>
-              <div class="main__following-dec"></div>
+              <button class="main__following-dec" type="submit"
+                      onsubmit="this.reset(); return false;"></button>
             </form>
           </div>
         </div>
@@ -347,6 +348,12 @@
               </li>
             </ul>
           </section>
+
+          <a href="#" class="footer__top">
+            <span class="footer__button">
+              <span class="footer__icon-top"></span>
+            </span>
+          </a>
 
           <div class="footer__nav">
             <ul class="footer__nav-list">
