--- a/src/index.html
+++ b/src/index.html
@@ -248,12 +248,12 @@
               <p class="main__following-description">Бути в курсі всіх актуальних подій та останніх новин.</p>
             </div>
 
-            <form class="main__following-form">
+            <form class="main__following-form" onsubmit="this.reset(); return false;">
               <input type="email" name="email"
                     class="main__following-input" placeholder="E-mail"
                     required>
               <button class="main__following-dec" type="submit"
-                      onsubmit="this.reset(); return false;"></button>
+                      ></button>
             </form>
           </div>
         </div>
