--- a/src/index.html
+++ b/src/index.html
@@ -31,10 +31,10 @@
         </div>
         <div class="header__container">
           <h1 class="header__title">Художній музей</h1>
-          <div class="header__button">
+          <button class="header__button">
             <p class="header__button-text">Квитки</p>
             <a href="#" class="header__button-dec"></a>
-          </div>
+          </button>
           <a href="#events" class="header__events">
             <p class="header__events-text">Події</p>
           </a>
@@ -42,7 +42,7 @@
         <div class="header__bg-img"></div>
       </div>
     </header>
-    <aside class="menu" id="menu">
+    <aside class="menu page__menu" id="menu">
       <div class="container">
         <div class="menu__wrapper">
           <nav class="menu__nav">
