--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,10 @@
       rel="stylesheet"
       href="./styles/main.scss"
     />
+    <link
+      rel="icon"
+      href="images/logo-fav.png"
+    />
   </head>
   <body class="page__body">
     <div class="upper__page">
@@ -346,15 +350,39 @@
         >
           <h3 class="footer__contacts-title">Контакти:</h3>
 
-          <p class="footer__contacts-text">
+          <a
+            target="_blank"
+            class="footer__contacts-link"
+            href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494291,30.5286859,17z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI0MDkyNC4wIKXMDSoASAFQAw%3D%3D"
+          >
             вул. М. Грушевського, 6; Київ, 01001
             <br />
+          </a>
+
+          <a
+            class="footer__contacts-link"
+            href="tel: +38 (044) 278-13-57"
+          >
             тел. +38 (044) 278-13-57
             <br />
+          </a>
+
+          <a
+            class="footer__contacts-link"
+            href="tel: +38 (044) 278-74-54"
+          >
             факс +38 (044) 278-74-54
             <br />
+          </a>
+
+          <a
+            target="_blank"
+            class="footer__contacts-link"
+            href="mailto:info@namu.kiev.ua"
+          >
             e-mail: info@namu.kiev.ua
-          </p>
+            <br />
+          </a>
         </div>
       </div>
 
