--- a/src/index.html
+++ b/src/index.html
@@ -17,40 +17,42 @@
     />
   </head>
   <body class="page__body">
-    <div class="menu-background">
-      <div class="upper__page">
-        <header
-          class="header"
-          id="header"
+    <div class="upper__page">
+      <header
+        class="header"
+        id="header"
+      >
+        <a
+          class="header__link"
+          href="#menu"
         >
-          <a
-            class="header__link"
-            href="#menu"
-          >
-            <img
-              class="header__link-logo"
-              src="./images/vectors/menu-logo.svg"
-              alt="menu-logo"
-            />
-          </a>
+          <img
+            class="header__link-logo"
+            src="./images/vectors/menu-logo.svg"
+            alt="menu-logo"
+          />
+        </a>
 
-          <a
-            class="header__link-title"
-            href="#header"
-          >
-            <h1 class="header__title">
-              NA
-              <br />
-              MU
-            </h1>
-          </a>
-        </header>
-
-        <aside
-          class="menu"
-          id="menu"
+        <a
+          class="header__link-title"
+          href="#header"
         >
+          <h1 class="header__title">
+            NA
+            <br />
+            MU
+          </h1>
+        </a>
+      </header>
+
+      <aside
+        class="menu"
+      >
+
+        <div class="menu__content" id="menu">
+
           <div class="menu__links">
+
             <a
               class="menu__link-cros"
               href="#header"
@@ -122,324 +124,324 @@
               до закриття музею
             </p>
           </div>
-        </aside>
-      </div>
+        </div>
+      </aside>
+    </div>
 
-      <div class="art-museum">
-        <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+    <div class="art-museum">
+      <h1 class="art-museum__title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-        <a
-          href="#"
-          class="art-museum__tickets"
-        >
-          <p class="art-museum__tickets-text">КВИТКИ</p>
-
-          <div class="art-museum__tickets-button">
-            <img
-              class="art-museum__tickets-button-img"
-              src="./images/vectors/arrow-right.svg"
-              alt="arrow-right"
-            />
-          </div>
-        </a>
-      </div>
-      <div
-        class="current-events"
-        id="current-events"
+      <a
+        href="#"
+        class="art-museum__tickets"
       >
-        <h1 class="current-events__title">Актуальні події</h1>
+        <p class="art-museum__tickets-text">КВИТКИ</p>
 
-        <div class="current-events__go-back go-back">
+        <div class="art-museum__tickets-button">
           <img
-            src="./images/go-back.png"
-            alt="go-back-img"
-            class="go-back__img"
+            class="art-museum__tickets-button-img"
+            src="./images/vectors/arrow-right.svg"
+            alt="arrow-right"
           />
-
-          <div class="go-back__filling">
-            <div class="go-back__exhibition">
-              <h2 class="go-back__exhibition-title">ВИСТАВКА</h2>
-
-              <p class="go-back__exhibition-date">26.08-29.11.2019</p>
-            </div>
-
-            <div class="go-back__title">
-              <h1 class="go-back__title-text">Йду і повертаюсь</h1>
-
-              <div class="go-back__title-rectangle"></div>
-            </div>
-
-            <p class="go-back__description">
-              Національний Художній Музей України презентує унікальну частину
-              колекції Градобанку - українське мистецтво другої половини
-              1980-1995 років.
-            </p>
-          </div>
         </div>
+      </a>
+    </div>
+    <div
+      class="current-events"
+      id="current-events"
+    >
+      <h1 class="current-events__title">Актуальні події</h1>
 
-        <div class="current-events__dreams dreams">
-          <img
-            src="./images/dreams.png"
-            alt="dreams-img"
-            class="dreams__img"
-          />
+      <div class="current-events__go-back go-back">
+        <img
+          src="./images/go-back.png"
+          alt="go-back-img"
+          class="go-back__img"
+        />
 
-          <div class="dreams__filling">
-            <div class="dreams__exhibition">
-              <h2 class="dreams__exhibition-title">ВИСТАВКА</h2>
+        <div class="go-back__filling">
+          <div class="go-back__exhibition">
+            <h2 class="go-back__exhibition-title">ВИСТАВКА</h2>
 
-              <p class="dreams__exhibition-date">26.08-29.11.2019</p>
-            </div>
-
-            <div class="dreams__title">
-              <h1 class="dreams__title-text">І спогади і мрії</h1>
-
-              <div class="dreams__title-rectangle"></div>
-            </div>
-
-            <p class="dreams__description">
-              Національний художній музей України до 100 річчя від дня
-              народження видатної української художниці Тетяни Яблонської
-              відкриває ретроспективну ювілейну виставку «І спогади і мрії».
-            </p>
+            <p class="go-back__exhibition-date">26.08-29.11.2019</p>
           </div>
+
+          <div class="go-back__title">
+            <h1 class="go-back__title-text">Йду і повертаюсь</h1>
+
+            <div class="go-back__title-rectangle"></div>
+          </div>
+
+          <p class="go-back__description">
+            Національний Художній Музей України презентує унікальну частину
+            колекції Градобанку - українське мистецтво другої половини
+            1980-1995 років.
+          </p>
         </div>
+      </div>
+
+      <div class="current-events__dreams dreams">
+        <img
+          src="./images/dreams.png"
+          alt="dreams-img"
+          class="dreams__img"
+        />
+
+        <div class="dreams__filling">
+          <div class="dreams__exhibition">
+            <h2 class="dreams__exhibition-title">ВИСТАВКА</h2>
+
+            <p class="dreams__exhibition-date">26.08-29.11.2019</p>
+          </div>
+
+          <div class="dreams__title">
+            <h1 class="dreams__title-text">І спогади і мрії</h1>
+
+            <div class="dreams__title-rectangle"></div>
+          </div>
+
+          <p class="dreams__description">
+            Національний художній музей України до 100 річчя від дня
+            народження видатної української художниці Тетяни Яблонської
+            відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+          </p>
+        </div>
+      </div>
+
+      <img
+        class="current-events__img-end"
+        src="./images/current-events-end.png"
+        alt="current-events__img-end"
+      />
+    </div>
+
+    <div class="romanticism">
+      <div class="romanticism__lecture">
+        <h2 class="romanticism__lecture-title">ЛЕКЦІЯ</h2>
+
+        <p class="romanticism__lecture-date">26/08/2019 - 11:00</p>
+      </div>
+
+      <h1 class="romanticism__title">Від класицизму до романтизму</h1>
+    </div>
+
+    <div
+      class="gallery"
+      id="gallery"
+    >
+      <h1 class="gallery__title">Галерея</h1>
+
+      <div class="gallery__imgs">
+        <img
+          src="./images/gallery-img-1.png"
+          alt="gallery-img-1"
+          class="gallery__img-1"
+        />
 
         <img
-          class="current-events__img-end"
-          src="./images/current-events-end.png"
-          alt="current-events__img-end"
+          src="./images/gallery-img-2.png"
+          alt="gallery-img-2"
+          class="gallery__img-2"
+        />
+
+        <img
+          src="./images/gallery-img-3.png"
+          alt="gallery-img-3"
+          class="gallery__img-3"
+        />
+
+        <img
+          src="./images/gallery-img-4.png"
+          alt="gallery-img-4"
+          class="gallery__img-4"
+        />
+
+        <img
+          src="./images/gallery-img-5.png"
+          alt="gallery-img-5"
+          class="gallery__img-5"
         />
       </div>
 
-      <div class="romanticism">
-        <div class="romanticism__lecture">
-          <h2 class="romanticism__lecture-title">ЛЕКЦІЯ</h2>
+      <div class="gallery__ellipses">
+        <div class="gallery__ellipses-on"></div>
 
-          <p class="romanticism__lecture-date">26/08/2019 - 11:00</p>
-        </div>
+        <div class="gallery__ellipses-off"></div>
 
-        <h1 class="romanticism__title">Від класицизму до романтизму</h1>
+        <div class="gallery__ellipses-off"></div>
+
+        <div class="gallery__ellipses-off"></div>
+      </div>
+    </div>
+
+    <div
+      class="subscription"
+      id="subscription"
+    >
+      <div class="subscription__description">
+        <h1 class="subscription__description-title">Підписка</h1>
+
+        <p class="subscription__description-text">
+          Бути в курсі всіх актуальних подій та останніх новин.
+        </p>
       </div>
 
-      <div
-        class="gallery"
-        id="gallery"
+      <form
+        onsubmit="this.reset(); return false;"
+        class="subscription__tickets"
       >
-        <h1 class="gallery__title">Галерея</h1>
+        <input
+          class="subscription__tickets-email"
+          type="email"
+          placeholder="E-mail"
+        />
 
-        <div class="gallery__imgs">
+        <button class="subscription__tickets-button">
           <img
-            src="./images/gallery-img-1.png"
-            alt="gallery-img-1"
-            class="gallery__img-1"
+            class="subscription__tickets-button-img"
+            src="./images/vectors/arrow-right-black.png"
+            alt="arrow-right"
           />
+        </button>
+      </form>
+    </div>
 
-          <img
-            src="./images/gallery-img-2.png"
-            alt="gallery-img-2"
-            class="gallery__img-2"
-          />
-
-          <img
-            src="./images/gallery-img-3.png"
-            alt="gallery-img-3"
-            class="gallery__img-3"
-          />
-
-          <img
-            src="./images/gallery-img-4.png"
-            alt="gallery-img-4"
-            class="gallery__img-4"
-          />
-
-          <img
-            src="./images/gallery-img-5.png"
-            alt="gallery-img-5"
-            class="gallery__img-5"
-          />
-        </div>
-
-        <div class="gallery__ellipses">
-          <div class="gallery__ellipses-on"></div>
-
-          <div class="gallery__ellipses-off"></div>
-
-          <div class="gallery__ellipses-off"></div>
-
-          <div class="gallery__ellipses-off"></div>
-        </div>
-      </div>
-
-      <div
-        class="subscription"
-        id="subscription"
-      >
-        <div class="subscription__description">
-          <h1 class="subscription__description-title">Підписка</h1>
-
-          <p class="subscription__description-text">
-            Бути в курсі всіх актуальних подій та останніх новин.
-          </p>
-        </div>
-
-        <form
-          onsubmit="this.reset(); return false;"
-          class="subscription__tickets"
-        >
-          <input
-            class="subscription__tickets-email"
-            type="email"
-            placeholder="E-mail"
-          />
-
-          <button class="subscription__tickets-button">
-            <img
-              class="subscription__tickets-button-img"
-              src="./images/vectors/arrow-right-black.png"
-              alt="arrow-right"
-            />
-          </button>
-        </form>
-      </div>
-
-      <footer class="footer">
-        <div class="footer__title">
-          <a
-            href="#header"
-            class="footer__title-link"
-          >
-            <h1 class="footer__title-text">
-              NA
-              <br />
-              MU
-            </h1>
-          </a>
-
-          <div class="footer__title-logo-facebook"></div>
-
-          <div class="footer__title-logo-instagram"></div>
-        </div>
-
-        <div class="footer__text">
-          <div class="footer__schedule">
-            <h3 class="footer__schedule-title">Графік роботи</h3>
-
-            <p class="footer__schedule-text">
-              12:00 — 20:00 середа
-              <br />
-              12:00 — 20:00 четвер
-              <br />
-              12:00 — 20:00 п’ятниця
-              <br />
-              11:00 — 19:00 субота
-              <br />
-              11:00 — 19:00 неділя
-              <br />
-              <br />
-              Вихідні понеділок, вівторок
-              <br />
-              Каса припиняє роботу за 1 годину
-              <br />
-              до закриття музею
-            </p>
-          </div>
-
-          <div
-            class="footer__contacts"
-            id="footer__contacts"
-          >
-            <h3 class="footer__contacts-title">Контакти:</h3>
-
-            <a
-              target="_blank"
-              class="footer__contacts-link"
-              href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494291,30.5286859,17z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI0MDkyNC4wIKXMDSoASAFQAw%3D%3D"
-            >
-              вул. М. Грушевського, 6; Київ, 01001
-              <br />
-            </a>
-
-            <a
-              class="footer__contacts-link"
-              href="tel: +38 (044) 278-13-57"
-            >
-              тел. +38 (044) 278-13-57
-              <br />
-            </a>
-
-            <a
-              class="footer__contacts-link"
-              href="tel: +38 (044) 278-74-54"
-            >
-              факс +38 (044) 278-74-54
-              <br />
-            </a>
-
-            <a
-              target="_blank"
-              class="footer__contacts-link"
-              href="mailto:info@namu.kiev.ua"
-            >
-              e-mail: info@namu.kiev.ua
-              <br />
-            </a>
-          </div>
-        </div>
-
+    <footer class="footer">
+      <div class="footer__title">
         <a
-          class="footer__button-link"
           href="#header"
+          class="footer__title-link"
         >
-          <button class="footer__button">
-            <img
-              class="footer__button-img"
-              src="./images/vectors/arrow-up.svg"
-              alt="arrow-up"
-            />
-          </button>
+          <h1 class="footer__title-text">
+            NA
+            <br />
+            MU
+          </h1>
         </a>
 
-        <div class="footer__line"></div>
+        <div class="footer__title-logo-facebook"></div>
 
-        <div class="footer__links">
-          <a
-            href="#gallery"
-            class="footer__link"
-          >
-            Галерея
-          </a>
+        <div class="footer__title-logo-instagram"></div>
+      </div>
 
-          <a
-            href="#subscription"
-            class="footer__link"
-          >
-            Про Нас
-          </a>
+      <div class="footer__text">
+        <div class="footer__schedule">
+          <h3 class="footer__schedule-title">Графік роботи</h3>
 
-          <a
-            href="#current-events"
-            class="footer__link"
-          >
-            Виставки та події
-          </a>
-
-          <a
-            href="#footer__contacts"
-            class="footer__link"
-          >
-            Контакти
-          </a>
-        </div>
-
-        <div class="footer__by">
-          <p class="footer__by-text-2">Designed by Zhyriada Marina</p>
-
-          <p class="footer__by-text-1">
-            Copyright © 2019. All Rights Reserved.
+          <p class="footer__schedule-text">
+            12:00 — 20:00 середа
+            <br />
+            12:00 — 20:00 четвер
+            <br />
+            12:00 — 20:00 п’ятниця
+            <br />
+            11:00 — 19:00 субота
+            <br />
+            11:00 — 19:00 неділя
+            <br />
+            <br />
+            Вихідні понеділок, вівторок
+            <br />
+            Каса припиняє роботу за 1 годину
+            <br />
+            до закриття музею
           </p>
         </div>
-      </footer>
-    </div>
+
+        <div
+          class="footer__contacts"
+          id="footer__contacts"
+        >
+          <h3 class="footer__contacts-title">Контакти:</h3>
+
+          <a
+            target="_blank"
+            class="footer__contacts-link"
+            href="https://www.google.com.ua/maps/place/%D1%83%D0%BB.+%D0%9C%D0%B8%D1%85%D0%B0%D0%B8%D0%BB%D0%B0+%D0%93%D1%80%D1%83%D1%88%D0%B5%D0%B2%D1%81%D0%BA%D0%BE%D0%B3%D0%BE,+6,+%D0%9A%D0%B8%D0%B5%D0%B2,+02000/@50.4494291,30.5286859,17z/data=!4m6!3m5!1s0x40d4ce52445a8315:0x5e30ef474eddac89!8m2!3d50.449395!4d30.5307834!16s%2Fg%2F11l76wtstx?hl=ru&entry=ttu&g_ep=EgoyMDI0MDkyNC4wIKXMDSoASAFQAw%3D%3D"
+          >
+            вул. М. Грушевського, 6; Київ, 01001
+            <br />
+          </a>
+
+          <a
+            class="footer__contacts-link"
+            href="tel: +38 (044) 278-13-57"
+          >
+            тел. +38 (044) 278-13-57
+            <br />
+          </a>
+
+          <a
+            class="footer__contacts-link"
+            href="tel: +38 (044) 278-74-54"
+          >
+            факс +38 (044) 278-74-54
+            <br />
+          </a>
+
+          <a
+            target="_blank"
+            class="footer__contacts-link"
+            href="mailto:info@namu.kiev.ua"
+          >
+            e-mail: info@namu.kiev.ua
+            <br />
+          </a>
+        </div>
+      </div>
+
+      <a
+        class="footer__button-link"
+        href="#header"
+      >
+        <button class="footer__button">
+          <img
+            class="footer__button-img"
+            src="./images/vectors/arrow-up.svg"
+            alt="arrow-up"
+          />
+        </button>
+      </a>
+
+      <div class="footer__line"></div>
+
+      <div class="footer__links">
+        <a
+          href="#gallery"
+          class="footer__link"
+        >
+          Галерея
+        </a>
+
+        <a
+          href="#subscription"
+          class="footer__link"
+        >
+          Про Нас
+        </a>
+
+        <a
+          href="#current-events"
+          class="footer__link"
+        >
+          Виставки та події
+        </a>
+
+        <a
+          href="#footer__contacts"
+          class="footer__link"
+        >
+          Контакти
+        </a>
+      </div>
+
+      <div class="footer__by">
+        <p class="footer__by-text-2">Designed by Zhyriada Marina</p>
+
+        <p class="footer__by-text-1">
+          Copyright © 2019. All Rights Reserved.
+        </p>
+      </div>
+    </footer>
   </body>
 </html>
