--- a/src/index.html
+++ b/src/index.html
@@ -45,14 +45,11 @@
         </a>
       </header>
 
-      <aside
-        class="menu"
-      >
-
-        <div class="menu__content" id="menu">
-
+      <aside class="menu" id="menu">
+        <div
+          class="menu__content"
+        >
           <div class="menu__links">
-
             <a
               class="menu__link-cros"
               href="#header"
@@ -174,8 +171,8 @@
 
           <p class="go-back__description">
             Національний Художній Музей України презентує унікальну частину
-            колекції Градобанку - українське мистецтво другої половини
-            1980-1995 років.
+            колекції Градобанку - українське мистецтво другої половини 1980-1995
+            років.
           </p>
         </div>
       </div>
@@ -201,9 +198,9 @@
           </div>
 
           <p class="dreams__description">
-            Національний художній музей України до 100 річчя від дня
-            народження видатної української художниці Тетяни Яблонської
-            відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+            Національний художній музей України до 100 річчя від дня народження
+            видатної української художниці Тетяни Яблонської відкриває
+            ретроспективну ювілейну виставку «І спогади і мрії».
           </p>
         </div>
       </div>
@@ -438,9 +435,7 @@
       <div class="footer__by">
         <p class="footer__by-text-2">Designed by Zhyriada Marina</p>
 
-        <p class="footer__by-text-1">
-          Copyright © 2019. All Rights Reserved.
-        </p>
+        <p class="footer__by-text-1">Copyright © 2019. All Rights Reserved.</p>
       </div>
     </footer>
   </body>
