--- a/src/index.html
+++ b/src/index.html
@@ -45,10 +45,11 @@
         </a>
       </header>
 
-      <aside class="menu" id="menu">
-        <div
-          class="menu__content"
-        >
+      <aside
+        class="menu"
+        id="menu"
+      >
+        <div class="menu__content">
           <div class="menu__links">
             <a
               class="menu__link-cros"
