add inst & fcbk links

--- a/src/index.html
+++ b/src/index.html
@@ -317,9 +317,20 @@
           </h1>
         </a>
 
-        <div class="footer__title-logo-facebook"></div>
+        <a
+          class="footer__title-logo-facebook"
+          href="https://www.facebook.com/namu.museum/?locale=ua"
+          target="_blank">
+          <div ></div>
+        </a>
 
-        <div class="footer__title-logo-instagram"></div>
+        <a
+          class="footer__title-logo-instagram"
+          href="https://www.instagram.com/namu.museum?igsh=MTg4cHp3OG1jbGYxcQ=="
+          target="_blank">
+
+          <div></div>
+        </a>
       </div>
 
       <div class="footer__text">
